--- a/population_demo.ipynb
+++ b/population_demo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP97ERuiiJIiekF0lukoYXt",
+      "authorship_tag": "ABX9TyOyogidfyevkyTuuXuCyfhJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -17,7 +17,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "f2c4bf49c11f4815a2305255753a6d01": {
+        "68f0a76624b748b9986e79b1f0459681": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "VBoxModel",
           "model_module_version": "1.5.0",
@@ -34,13 +34,13 @@
             "_view_name": "VBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_31bb1db3fa4b406d80e60b6e1aea178b",
-              "IPY_MODEL_8c8b5681bfb84a94a34c76b22678418a"
+              "IPY_MODEL_f19279f6a17b43cc8d61849ed109d782",
+              "IPY_MODEL_baa74c02dc564aefb024ae5736e4a078"
             ],
-            "layout": "IPY_MODEL_8d049f536ac24a5685947081fc0309eb"
+            "layout": "IPY_MODEL_60533fa310624f25b33524dfc419a91c"
           }
         },
-        "31bb1db3fa4b406d80e60b6e1aea178b": {
+        "f19279f6a17b43cc8d61849ed109d782": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DropdownModel",
           "model_module_version": "1.5.0",
@@ -68,11 +68,11 @@
             "description_tooltip": null,
             "disabled": false,
             "index": 0,
-            "layout": "IPY_MODEL_2c7a5de715ff445ca0c52377772b3b49",
-            "style": "IPY_MODEL_da2bb6626d7042c6881d4cc0f3e42105"
+            "layout": "IPY_MODEL_ffe7967edb974263a25f12a825a40b97",
+            "style": "IPY_MODEL_1c4789541ce949da86506c5666625661"
           }
         },
-        "8c8b5681bfb84a94a34c76b22678418a": {
+        "baa74c02dc564aefb024ae5736e4a078": {
           "model_module": "@jupyter-widgets/output",
           "model_name": "OutputModel",
           "model_module_version": "1.0.0",
@@ -85,14 +85,14 @@
             "_view_module": "@jupyter-widgets/output",
             "_view_module_version": "1.0.0",
             "_view_name": "OutputView",
-            "layout": "IPY_MODEL_1750cbfed66e4c51ba689ceccfc1bc84",
+            "layout": "IPY_MODEL_44bd2e33a7ba4aafa2d49e9f88ce1cf2",
             "msg_id": "",
             "outputs": [
               {
                 "output_type": "display_data",
                 "data": {
                   "text/plain": "   num  POPESTIMATE2020  BENFORD'S LAW\n0    1         0.303599       0.301030\n1    2         0.183099       0.176091\n2    3         0.121127       0.124939\n3    4         0.093271       0.096910\n4    5         0.077934       0.079181\n5    6         0.065728       0.066947\n6    7         0.054460       0.057992\n7    8         0.051017       0.051153\n8    9         0.049765       0.045757",
-                  "text/html": "\n  <div id=\"df-e54ec70c-3273-48f7-9027-8fbbcb0428a1\">\n    <div class=\"colab-df-container\">\n      <div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>num</th>\n      <th>POPESTIMATE2020</th>\n      <th>BENFORD'S LAW</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>0.303599</td>\n      <td>0.301030</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>0.183099</td>\n      <td>0.176091</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>0.121127</td>\n      <td>0.124939</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>0.093271</td>\n      <td>0.096910</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>0.077934</td>\n      <td>0.079181</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>6</td>\n      <td>0.065728</td>\n      <td>0.066947</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>7</td>\n      <td>0.054460</td>\n      <td>0.057992</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>8</td>\n      <td>0.051017</td>\n      <td>0.051153</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>9</td>\n      <td>0.049765</td>\n      <td>0.045757</td>\n    </tr>\n  </tbody>\n</table>\n</div>\n      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e54ec70c-3273-48f7-9027-8fbbcb0428a1')\"\n              title=\"Convert this dataframe to an interactive table.\"\n              style=\"display:none;\">\n        \n  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n       width=\"24px\">\n    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n  </svg>\n      </button>\n      \n  <style>\n    .colab-df-container {\n      display:flex;\n      flex-wrap:wrap;\n      gap: 12px;\n    }\n\n    .colab-df-convert {\n      background-color: #E8F0FE;\n      border: none;\n      border-radius: 50%;\n      cursor: pointer;\n      display: none;\n      fill: #1967D2;\n      height: 32px;\n      padding: 0 0 0 0;\n      width: 32px;\n    }\n\n    .colab-df-convert:hover {\n      background-color: #E2EBFA;\n      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n      fill: #174EA6;\n    }\n\n    [theme=dark] .colab-df-convert {\n      background-color: #3B4455;\n      fill: #D2E3FC;\n    }\n\n    [theme=dark] .colab-df-convert:hover {\n      background-color: #434B5C;\n      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n      fill: #FFFFFF;\n    }\n  </style>\n\n      <script>\n        const buttonEl =\n          document.querySelector('#df-e54ec70c-3273-48f7-9027-8fbbcb0428a1 button.colab-df-convert');\n        buttonEl.style.display =\n          google.colab.kernel.accessAllowed ? 'block' : 'none';\n\n        async function convertToInteractive(key) {\n          const element = document.querySelector('#df-e54ec70c-3273-48f7-9027-8fbbcb0428a1');\n          const dataTable =\n            await google.colab.kernel.invokeFunction('convertToInteractive',\n                                                     [key], {});\n          if (!dataTable) return;\n\n          const docLinkHtml = 'Like what you see? Visit the ' +\n            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n            + ' to learn more about interactive tables.';\n          element.innerHTML = '';\n          dataTable['output_type'] = 'display_data';\n          await google.colab.output.renderOutput(dataTable, element);\n          const docLink = document.createElement('div');\n          docLink.innerHTML = docLinkHtml;\n          element.appendChild(docLink);\n        }\n      </script>\n    </div>\n  </div>\n  "
+                  "text/html": "\n  <div id=\"df-0cc15a83-6a9a-443b-a2be-bc4aaa3dd722\">\n    <div class=\"colab-df-container\">\n      <div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>num</th>\n      <th>POPESTIMATE2020</th>\n      <th>BENFORD'S LAW</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>0.303599</td>\n      <td>0.301030</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>0.183099</td>\n      <td>0.176091</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>0.121127</td>\n      <td>0.124939</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>0.093271</td>\n      <td>0.096910</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>0.077934</td>\n      <td>0.079181</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>6</td>\n      <td>0.065728</td>\n      <td>0.066947</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>7</td>\n      <td>0.054460</td>\n      <td>0.057992</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>8</td>\n      <td>0.051017</td>\n      <td>0.051153</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>9</td>\n      <td>0.049765</td>\n      <td>0.045757</td>\n    </tr>\n  </tbody>\n</table>\n</div>\n      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0cc15a83-6a9a-443b-a2be-bc4aaa3dd722')\"\n              title=\"Convert this dataframe to an interactive table.\"\n              style=\"display:none;\">\n        \n  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n       width=\"24px\">\n    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n  </svg>\n      </button>\n      \n  <style>\n    .colab-df-container {\n      display:flex;\n      flex-wrap:wrap;\n      gap: 12px;\n    }\n\n    .colab-df-convert {\n      background-color: #E8F0FE;\n      border: none;\n      border-radius: 50%;\n      cursor: pointer;\n      display: none;\n      fill: #1967D2;\n      height: 32px;\n      padding: 0 0 0 0;\n      width: 32px;\n    }\n\n    .colab-df-convert:hover {\n      background-color: #E2EBFA;\n      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n      fill: #174EA6;\n    }\n\n    [theme=dark] .colab-df-convert {\n      background-color: #3B4455;\n      fill: #D2E3FC;\n    }\n\n    [theme=dark] .colab-df-convert:hover {\n      background-color: #434B5C;\n      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n      fill: #FFFFFF;\n    }\n  </style>\n\n      <script>\n        const buttonEl =\n          document.querySelector('#df-0cc15a83-6a9a-443b-a2be-bc4aaa3dd722 button.colab-df-convert');\n        buttonEl.style.display =\n          google.colab.kernel.accessAllowed ? 'block' : 'none';\n\n        async function convertToInteractive(key) {\n          const element = document.querySelector('#df-0cc15a83-6a9a-443b-a2be-bc4aaa3dd722');\n          const dataTable =\n            await google.colab.kernel.invokeFunction('convertToInteractive',\n                                                     [key], {});\n          if (!dataTable) return;\n\n          const docLinkHtml = 'Like what you see? Visit the ' +\n            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n            + ' to learn more about interactive tables.';\n          element.innerHTML = '';\n          dataTable['output_type'] = 'display_data';\n          await google.colab.output.renderOutput(dataTable, element);\n          const docLink = document.createElement('div');\n          docLink.innerHTML = docLinkHtml;\n          element.appendChild(docLink);\n        }\n      </script>\n    </div>\n  </div>\n  "
                 },
                 "metadata": {}
               },
@@ -117,14 +117,14 @@
                 "text": [
                   "\n",
                   "Chi-Square Goodness of Fit Test\n",
-                  "Test Statistic: 0.001162073752975824\n",
-                  "p-value: 0.9999999999999952\n"
+                  "Test Statistic: 3.712825640757762\n",
+                  "p-value: 0.8820596379391886\n"
                 ]
               }
             ]
           }
         },
-        "8d049f536ac24a5685947081fc0309eb": {
+        "60533fa310624f25b33524dfc419a91c": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -176,7 +176,7 @@
             "width": null
           }
         },
-        "2c7a5de715ff445ca0c52377772b3b49": {
+        "ffe7967edb974263a25f12a825a40b97": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -228,7 +228,7 @@
             "width": null
           }
         },
-        "da2bb6626d7042c6881d4cc0f3e42105": {
+        "1c4789541ce949da86506c5666625661": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -243,7 +243,7 @@
             "description_width": ""
           }
         },
-        "1750cbfed66e4c51ba689ceccfc1bc84": {
+        "44bd2e33a7ba4aafa2d49e9f88ce1cf2": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -344,7 +344,7 @@
       "metadata": {
         "id": "HE624Z0AyUgb"
       },
-      "execution_count": 65,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -366,13 +366,13 @@
       ],
       "metadata": {
         "id": "0yZCVFqtEYVA",
+        "outputId": "b2adc3e7-d147-4428-a38c-04298b195f09",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        },
-        "outputId": "8051e825-2ff2-4d2e-adfd-2d5bfe092875"
+        }
       },
-      "execution_count": 66,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,7 +394,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4fa394a4-911c-4e89-8066-f7c348fe42a6\">\n",
+              "  <div id=\"df-1e2cff57-d348-4c45-8466-f4ae708c0d42\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -489,7 +489,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4fa394a4-911c-4e89-8066-f7c348fe42a6')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1e2cff57-d348-4c45-8466-f4ae708c0d42')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -540,12 +540,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-4fa394a4-911c-4e89-8066-f7c348fe42a6 button.colab-df-convert');\n",
+              "          document.querySelector('#df-1e2cff57-d348-4c45-8466-f4ae708c0d42 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-4fa394a4-911c-4e89-8066-f7c348fe42a6');\n",
+              "          const element = document.querySelector('#df-1e2cff57-d348-4c45-8466-f4ae708c0d42');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -568,7 +568,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 66
+          "execution_count": 4
         }
       ]
     },
@@ -606,8 +606,17 @@
         "  both.plot.bar(x=\"num\")\n",
         "  plt.show()\n",
         "\n",
+        "  observed = (pop[pop[var] > 0][var]\n",
+        "         .astype(str)\n",
+        "         .apply(lambda x: x[0])\n",
+        "         .astype(int)\n",
+        "         .value_counts()\n",
+        "         .sort_index())\n",
+        "  \n",
+        "  benford = bfd[\"BENFORD'S LAW\"] * sum(observed)\n",
+        "\n",
         "  print()\n",
-        "  test_stat, p = stats.chisquare(both[var], both[\"BENFORD'S LAW\"])\n",
+        "  test_stat, p = stats.chisquare(observed, benford)\n",
         "  print(\"Chi-Square Goodness of Fit Test\")\n",
         "  print(\"Test Statistic:\", test_stat)\n",
         "  print(\"p-value:\", p)  \n",
@@ -617,7 +626,7 @@
       "metadata": {
         "id": "GVcj72g9PDHE"
       },
-      "execution_count": 67,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -629,22 +638,22 @@
       ],
       "metadata": {
         "id": "DiI8OGbMPlem",
+        "outputId": "476a2d2d-21c4-4471-b77e-7916bca914f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 877,
           "referenced_widgets": [
-            "f2c4bf49c11f4815a2305255753a6d01",
-            "31bb1db3fa4b406d80e60b6e1aea178b",
-            "8c8b5681bfb84a94a34c76b22678418a",
-            "8d049f536ac24a5685947081fc0309eb",
-            "2c7a5de715ff445ca0c52377772b3b49",
-            "da2bb6626d7042c6881d4cc0f3e42105",
-            "1750cbfed66e4c51ba689ceccfc1bc84"
+            "68f0a76624b748b9986e79b1f0459681",
+            "f19279f6a17b43cc8d61849ed109d782",
+            "baa74c02dc564aefb024ae5736e4a078",
+            "60533fa310624f25b33524dfc419a91c",
+            "ffe7967edb974263a25f12a825a40b97",
+            "1c4789541ce949da86506c5666625661",
+            "44bd2e33a7ba4aafa2d49e9f88ce1cf2"
           ]
-        },
-        "outputId": "ace10a3d-d430-439a-e599-ac8270c98a14"
+        }
       },
-      "execution_count": 68,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -655,7 +664,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "f2c4bf49c11f4815a2305255753a6d01"
+              "model_id": "68f0a76624b748b9986e79b1f0459681"
             }
           },
           "metadata": {}
