--- a/bitcoin_demo.ipynb
+++ b/bitcoin_demo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9Mpj9v/mrgNsAaKPcDL4t",
+      "authorship_tag": "ABX9TyPSqF4pyLbJmN5VeARKef2P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "HE624Z0AyUgb"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -84,7 +84,7 @@
         "id": "0yZCVFqtEYVA",
         "outputId": "fa03f005-0a4c-444a-8497-a26877b6ae15"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,9 +383,9 @@
           "height": 331
         },
         "id": "1TsQso0VyWz0",
-        "outputId": "b62a36aa-dfbb-41e1-9c4a-47e1636603dd"
+        "outputId": "d9363f20-b046-4a32-da70-215db755137a"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -404,7 +404,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6af872e3-8a80-4f5b-a2f1-e035dd15328e\">\n",
+              "  <div id=\"df-e785a113-8785-42af-8d3a-981aaba46ba5\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -477,7 +477,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6af872e3-8a80-4f5b-a2f1-e035dd15328e')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e785a113-8785-42af-8d3a-981aaba46ba5')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -528,12 +528,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-6af872e3-8a80-4f5b-a2f1-e035dd15328e button.colab-df-convert');\n",
+              "          document.querySelector('#df-e785a113-8785-42af-8d3a-981aaba46ba5 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-6af872e3-8a80-4f5b-a2f1-e035dd15328e');\n",
+              "          const element = document.querySelector('#df-e785a113-8785-42af-8d3a-981aaba46ba5');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -556,7 +556,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 44
         }
       ]
     },
@@ -585,7 +585,7 @@
         "id": "KjeeXENV86z5",
         "outputId": "d36f6169-8a2e-494e-c3bd-5e010373d649"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -781,9 +781,9 @@
           "height": 461
         },
         "id": "moSyWHgcAzJg",
-        "outputId": "ebe9512c-a56f-4920-9729-29d6740ca6db"
+        "outputId": "b2a7e614-effe-46e8-a507-fe1c42768d8d"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -793,7 +793,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 45
         },
         {
           "output_type": "display_data",
@@ -836,9 +836,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FRuojK8BBXTr",
-        "outputId": "1e2b3195-f823-4c7e-d6b5-49c7f23b2cab"
+        "outputId": "92b63277-a5d5-43ac-cc4e-7dee8eb21113"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -849,6 +849,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Conclusion\n",
+        "\n",
+        "From this analysis, we can see that Bitcoin input values do not seem to follow Benford's law. In fact, many variables involving Bitcoin's value, such as its price and volume over time, seem to violate Benford's law. This has been a subject of controversy in the quantitative finance field. Some experts claim this is evidence of artificial price manipulation (see [here](https://quantpedia.com/benfords-law-suggests-bitcoins-price-manipulation/) and [here](https://medium.com/the-capital/betting-on-bitcoin-with-benfords-law-e45f1edcac9e)), while others assert that this is simply a result of its anomalous volatility (see [here](https://www.pressacademia.org/archives/jefa/v8/i2/4.pdf)). Whatever the case, it is clear from Benford's law that Bitcoin acts differently than a typical security."
+      ],
+      "metadata": {
+        "id": "8_HoUYi1mWH_"
+      }
     }
   ]
 }
