--- a/index.Rmd
+++ b/index.Rmd
@@ -9,6 +9,8 @@ links:
     url: "https://mshsu.github.io/probasets/crashes_demo.html"
   - label: Earthquakes
     url: "https://mshsu.github.io/probasets/earthquakes_demo.html"
+  - label: Fireballs
+    url: "https://mshsu.github.io/probasets/fireballs_demo.html"
   - label: Population
     url: "https://mshsu.github.io/probasets/population_demo.html"
 output: postcards::jolla
