--- a/crashes_demo.ipynb
+++ b/crashes_demo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNA+D7TM0dfJnqUbB/XHg51",
+      "authorship_tag": "ABX9TyNJY1ZzaubT+7fcomBHEEab",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
         "id": "8xy_UZOLu0lB",
         "outputId": "0cd6707f-d145-4357-ddf6-7592e23003ef"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,7 +99,7 @@
       "metadata": {
         "id": "109AsiOtuv-R"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "k6BUTd4SvZah"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +137,7 @@
         "id": "Zf8oNCVCvbl3",
         "outputId": "17991241-10c7-4413-ca30-eee5bacda7f2"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -662,7 +662,7 @@
         "id": "HX99GhPDvvNZ",
         "outputId": "9bf62f1f-29e2-428f-da5e-58b53d3d2ac6"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -913,7 +913,7 @@
         "id": "XHLW16fm6iPS",
         "outputId": "26537286-c986-4edd-f022-a17d34b233f8"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -961,7 +961,7 @@
         "id": "8Qv2C5hi8AYG",
         "outputId": "cdc9f74f-85a1-4304-8f16-bd22cd49d386"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1001,7 +1001,7 @@
         "# Here we generate a dataframe with all dates\n",
         "all_dates = pd.DataFrame(pd.date_range(start_date, end_date - pd.Timedelta(days = 1), freq='d')).rename(columns={0: 'date'}).astype(str)\n",
         "# Here we merge the df_counts with the table with all dates\n",
-        "# Then we fill in 0s for dates with no quakes\n",
+        "# Then we fill in 0s for dates with no fatal accidents\n",
         "df_counts = pd.merge(how='left', left=all_dates, right=df_counts, on='date').fillna(0)\n",
         "df_counts['freq'] = df_counts['freq'].astype(int)\n",
         "\n",
@@ -1015,7 +1015,7 @@
         "id": "gv8J-YXe8ZoV",
         "outputId": "f54e5fe1-c6b8-48d1-9e40-fc1485281b8b"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1223,7 +1223,7 @@
         "\n",
         "# Cosmetic stuff\n",
         "plt.ylabel(ylabel=\"Density\")\n",
-        "plt.xlabel(xlabel=\"# of Quakes on Given Day\")\n",
+        "plt.xlabel(xlabel=\"# of Fatal Accidents on Given Day\")\n",
         "plt.title(label=\"Distribution of # of Fatal Accidents in SLO County on a Given Day\")\n",
         "plt.xlim((0,max(df_counts[\"freq\"])+1))\n",
         "plt.show()"
@@ -1236,7 +1236,7 @@
         "id": "FCD6zs7f9HYT",
         "outputId": "df68f80a-7ff6-4261-8609-78f7688c29e6"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
